# final-year-project

./: .gitignore  .gitlab-ci.yml  README.md  diary.md  pyproject.toml
documents/: BFE.ipynb  README.md  main.typ  project-plan.md  references.bib  retrospective.typ
product/: README.md
product/binary-feature-extraction/: BFE.ipynb
product/binary-feature-extraction/examples/: example1  example1.c  example2  example2.c  example3  example3.c
product/binary-feature-extraction/scripts/: cfg1.py  extract1.py  extract2.py  extract3.py  extract4.py  ngrams.py
product/binary-feature-extraction/tool/: extraction_tool.py  instr_freq.py
product/machine-learning/dataset-generation/: gcjsample.csv
product/machine-learning/dataset-generation/scripts/: compile1.py  parse-csv1.py  parse-csv2.py  parse-csv3.py
product/machine-learning/dataset-generation/tool/: binary-features.txt  dataset-generator.py  dataset-generator2.py  extraction_tool.py  gcjsample.csv
product/machine-learning/model/: model.py  model_tests.ipynb  train.py
