[project]
name = "author-attribution-ml"
version = "0.0.1"
requires-python = ">= 3.11"
dependencies = [
    "lief",
    "numpy",
    "pathlib",
    "tqdm",
    "capstone",
    "pandas",
    "angr>=9.2.184",
    "scikit-learn",
    "ruff>=0.14.13",
]



[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # pycodestyle errors, pyflakes, warnings, isort
